feat: update job post methods to use access token instead of user ID and add builder pattern to request/response DTOs abd added tons of tesrs